fix admin edit other ppl review on mobile (bug 1130388)

--- a/src/media/css/reviews.styl
+++ b/src/media/css/reviews.styl
@@ -41,7 +41,7 @@ select[name=rating] {
         }
         &:not(.hidden) + li:before,
         + li.hidden + li:before {
-            color: $cement-gray;
+            color: $greyscale-grey;
             content: "\00a0\00a0\2022\00a0\00a0";
         }
     }
